fixed bug for dropdown menu alignment

--- a/app/assets/stylesheets/toldya.scss
+++ b/app/assets/stylesheets/toldya.scss
@@ -88,7 +88,8 @@ footer {
   }
 
   ul.dropdown-menu {
-    left: 0;
+    left: auto;
+
   }
 
   #main-cover h1 {
@@ -107,11 +108,11 @@ footer {
   }
   
   #main-cover p {
-    font-size: 1.3rem;
+    font-size: 1.2rem;
   }
 
   #main-cover a {
-    max-width: 1.1rem;
+    font-size: 1rem;
   }
 
   
